superbitty/tests/ui/bitfields/invalid_base_ty.rs
use superbitty::bitfields;

bitfields! {
    struct NegativeBaseTy : isize {}
}

bitfields! {
    struct OtherBaseTy : Option<String> {}
}

fn main() {}
